--- a/AxonCareerDay2017/PersonalFinanceManagement/Views/Shared/_Layout.cshtml
+++ b/AxonCareerDay2017/PersonalFinanceManagement/Views/Shared/_Layout.cshtml
@@ -1,44 +1,85 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
 
+    <script type="text/javascript">
+        var baseUrl = '@Href("~/")';
+        
+    </script>
+
+    <!-- Optional meta tags -->
+    @RenderSection("HeadMeta", false)
+
+    <!-- Core css -->
+    @Styles.Render("~/bundles/LayoutCoreStyle")
+
+    <title>Personal Finance Management</title>
+    @*<link rel="icon" href="@Url.Content("~/Images/favicon.ico")" type="image/x-icon">*@
+    
+    <!-- Optional style -->
+    @RenderSection("Style", false)
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+    <div id="wrapper">
+        @Html.Partial("_MenuPartial")
+        <div id="page-wrapper" class="gray-bg dashbard-1">
+            @Html.Partial("_TopMenuPartial")
+            @Html.Partial("_PageHeaderPartial")
+            <div class="wrapper wrapper-content animated fadeInRight">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="ibox float-e-margins">
+                            @Html.Partial("_PageTitlePartial")
+                            <div class="ibox-content pjax-container">
+                                @RenderBody()
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
-            </div>
+            @Html.Partial("_FooterPartial")
         </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+
+    <!-- Core js -->
+    @Scripts.Render("~/bundles/LayoutCoreScript")
+
+    @RenderSection("Script", false)
+    
+    <script type="text/javascript" language="javascript">
+        if (top.location.hostname !== self.location.hostname) {
+            top.location.href = self.location.href;
+        }
+    </script>
+
+    <div id="modal-container" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-content">
+            <div class="modal-body"></div>
+        </div>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('body').on('click', '.modal-link', function(e) {
+                e.preventDefault();
+                $(this).attr('data-target', '#modal-container');
+                $(this).attr('data-toggle', 'modal');
+            });
+
+            $('#modal-container').on('hidden.bs.modal', function() {
+                $(this).removeData('bs.modal');
+            });
+
+            $('#modal-container').on('show.bs.modal', function () {
+                $("#partialForm").validate();
+            });
+
+        });
+    </script>
+
 </body>
 </html>
